<resources>
    <string name="app_name">X9</string>
    <string name="report_title">Report Title</string>
    <string name="report_date">Report Date</string>
    <string name="report_desc">Report Description</string>
    <string name="report_location">Report Location</string>
    <string name="report_type">Report Type</string>
    <string name="report_type_desc">Select report type</string>
    <string-array name="report_types">
        <item>Speed Camera</item>
        <item>Heavy Traffic</item>
        <item>Road Incidents</item>
        <item>Broken Vehicles</item>
        <item>Other</item>
    </string-array>
    <string name="report_severity_desc">Select severity</string>
    <string-array name="report_severity">
        <item>Minor</item>
        <item>Moderate</item>
        <item>Major</item>
    </string-array>
    <string name="send">Send</string>
    <string name="traffic_report">Create Traffic Report</string>
    <string name="welcome">Welcome to X9!</string>
    <string name="back_to_home">Back to Home Page</string>


    <string name="report_severity_colon">Report Severity: </string>
    <string name="report_severity_title">Report Severity</string>
    <string name="report_title_colon">Report Title: </string>
    <string name="report_date_colon">Report Date: </string>
    <string name="report_desc_colon">Report Description: </string>
    <string name="report_location_colon">Report Location: </string>
    <string name="report_type_colon">Report Type: </string>

    <string name="fragment_dashboard">Dashboard Fragment</string>
    <string name="fragment_traffic">Traffic Fragment</string>
    <string name="title_activity_traffic_report_item">TrafficReportItem</string>
    <string name="title_activity_dropdown_menu">DropdownMenu</string>

    <string name="user_info_title">User Info</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="user_photo_description">The user\'s photo from Google Account</string>
    <string name="unknown_user">Unknown User</string>
    <string name="item_deleted">Item deleted successfully</string>
    <string name="edit_name">Enter the name</string>
    <string name="content_description_image">Image</string>
    <string name="dialog_add_title">Adding new entry</string>
    <string name="dialog_add_message">Create a new data in the database</string>
    <string name="button_add">Add</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_update_title">Update an entry</string>
    <string name="dialog_update_message">Update a selected data from the database</string>
    <string name="preference_file_key">dk.itu.moapd.x9.nalm.PREFERENCE_FILE_KEY</string>
    <string name="notification_title">Tracking Location</string>
    <string name="notification_text">Location updates are active</string>
    <string name="notification_channel_name">Location Tracking</string>
    <string name="notification_channel_description">Notifications for location tracking service</string>
    <string name="permission_denied_message">Location permission is required to track your location</string>
    <string name="permission_denied_message_camera">Camera permission is required to take pictures</string>
    <string name="itu_title">IT University of Copenhagen</string>
    <string name="fragment_map">Map Fragment</string>
    <string name="insert_image">Insert Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="image_view_description">Last taken image</string>
    <string name="button_back_description">Back</string>
    <string name="button_camera_switch_description">Switch camera</string>
    <string name="button_image_capture_description">Capture</string>
    <string name="button_image_viewer_description">Gallery</string>
    <string name="air_quality_index_colon">Air Quality Index: </string>
    <string name="unknown">Unknown Value</string>
    <string name="air_quality_category_colon">Air Quality Category: </string>
    <string name="text_view">Text View</string>




</resources>