<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/traffic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_title_colon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/input_traffic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@id/traffic_title"
            />


        <TextView
            android:id="@+id/traffic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_location_colon"
            app:layout_constraintTop_toBottomOf="@id/traffic_title"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/input_traffic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_location"
            app:layout_constraintTop_toBottomOf="@id/traffic_title"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@id/traffic_location"

            />


        <TextView
            android:id="@+id/traffic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_date_colon"
            app:layout_constraintTop_toBottomOf="@id/traffic_location"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/input_traffic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_date"
            app:layout_constraintTop_toBottomOf="@id/traffic_location"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@id/traffic_date"
            />


        <TextView
            android:id="@+id/traffic_report_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type_colon"
            app:layout_constraintTop_toBottomOf="@id/traffic_date"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/input_traffic_report_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_type"
            app:layout_constraintTop_toBottomOf="@id/traffic_date"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@id/traffic_report_type"

            />


        <TextView
            android:id="@+id/traffic_severity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_severity_colon"
            app:layout_constraintTop_toBottomOf="@id/traffic_report_type"
            android:layout_margin="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"

            />
        <TextView
            android:id="@+id/input_traffic_severity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_severity_title"
            app:layout_constraintTop_toBottomOf="@id/traffic_report_type"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@id/traffic_severity"

            />



        <TextView
            android:id="@+id/traffic_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_desc_colon"
            app:layout_constraintTop_toBottomOf="@id/traffic_severity"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/input_traffic_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_desc"
            app:layout_constraintTop_toBottomOf="@id/traffic_severity"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/traffic_desc"
            />
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorControlNormal"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_traffic_desc"
            app:layout_constraintDimensionRatio="H,3:1"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>